--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   drift: ^2.23.0
   drift_flutter: ^0.2.3
+  drift_db_viewer: ^2.1.0
+  path_provider: ^2.0.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
