--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   hive_generator: ^2.0.1
   image_picker: ^1.1.2
   flutter_riverpod: ^2.6.1
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +59,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   drift_dev: ^2.23.0
-  build_runner: ^2.4.13
   build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
